--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,53 +1,95 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
+}
 
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-
-apply plugin: 'kotlin-kapt'
+apply from: "$project.rootDir/scripts/dependencies.gradle"
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion sdkCompileVersion
+    buildToolsVersion buildToolsAllVersion
+
     defaultConfig {
         applicationId "kz.shopanov.yelnar.flickr"
-        minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        minSdkVersion sdkMinVersion
+        targetSdkVersion sdkTargetVersion
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
+
     buildTypes {
-        release {
+        debug {
+            signingConfig signingConfigs.debug
             minifyEnabled false
+            shrinkResources false
+        }
+
+        release {
+            signingConfig signingConfigs.debug
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
+
+    sourceSets {
+        main {
+            java.srcDirs 'src/main/kotlin', 'src/main/java'
+        }
+        test {
+            java.srcDirs 'src/test/java', "$projectDir/src/testShared"
+        }
+        androidTest {
+            java.srcDirs "$projectDir/src/androidIntegrationTest/java", "$projectDir/src/testShared"
+            assets.srcDirs "$projectDir/schemas", "$projectDir/src/androidIntegrationTest/assets"
+        }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+    lintOptions {
+        abortOnError false
+        checkReleaseBuilds true
+        disable 'MissingTranslation', 'CheckResult'
+    }
+    dexOptions { javaMaxHeapSize "6g" }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:27.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation androidXDependencies.coreKtx
+    implementation androidXDependencies.fragmentKtx
+    implementation androidXDependencies.appcompat
+    implementation androidXDependencies.materialDesign
+    implementation androidXDependencies.constraintLayout
+    implementation androidXDependencies.androidxNavigationFragmentKtx
+    implementation androidXDependencies.androidxNavigationUiKtx
 
-    // retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.4.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+//    implementation androidXDependencies.paging
+//    implementation androidXDependencies.lifecycle
+//    implementation androidXDependencies.lifecycleCompose
+//    implementation androidXDependencies.viewModelKtx
+//    implementation androidXDependencies.savedState
+//    implementation androidXDependencies.livedataKtx
+//    implementation androidXDependencies.roomCommon
+//    implementation androidXDependencies.roomRuntime
+//    implementation androidXDependencies.roomKtx
+//    implementation androidXDependencies.viewpager2
+//    implementation androidXDependencies.auth
+//    kapt androidXDependencies.roomCompiler
+//    implementation androidXDependencies.annotations
 
-    kapt 'com.android.databinding:compiler:3.1.3'
+    implementation coroutinesDependencies.coroutines
+    implementation coroutinesDependencies.coroutinesAndroid
 
-    //room
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation retrofitDependencies.core
+    implementation retrofitDependencies.gson
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation okHttpDependencies.loggingInterceptor
 }
