--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,40 +5,24 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".views.MainActivity"
-            android:label="@string/app_name"
+            android:name=".presentation.ui.main.MainActivity"
+            android:exported="true"
             android:launchMode="singleInstance"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
         </activity>
 
-        <provider
-            android:name=".application.SimpleRecentSuggestionsProvider"
-            android:authorities="kz.shopanov.yelnar.flickr.SimpleRecentSuggestionsProvider"
-            android:exported="false" />
-
         <activity
-            android:name=".views.PhotoViewActivity"
-            android:screenOrientation="portrait"
+            android:name=".presentation.ui.imagelist.ImagesFragment"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 </manifest>
