--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,35 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.2.30'
+    apply from: "$project.rootDir/scripts/dependencies.gradle"
+
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    dependencies {
+        classpath gradlePluginDependencies.build
+        classpath gradlePluginDependencies.kotlin
+        classpath gradlePluginDependencies.navigationSafeArgs
     }
 }
 
 allprojects {
+    apply from: "$rootDir/scripts/dependencies.gradle"
+
     repositories {
+        maven { url 'https://jitpack.io' }
         google()
-        jcenter()
+        mavenCentral()
+    }
+}
+
+subprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            // Enable experimental coroutines APIs, including Flow
+            freeCompilerArgs += "-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi"
+            freeCompilerArgs += "-Xuse-experimental=kotlinx.coroutines.FlowPreview"
+        }
     }
 }
 
