--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,32 +34,22 @@ android {
         }
     }
 
-    sourceSets {
-        main {
-            java.srcDirs 'src/main/kotlin', 'src/main/java'
-        }
-        test {
-            java.srcDirs 'src/test/java', "$projectDir/src/testShared"
-        }
-        androidTest {
-            java.srcDirs "$projectDir/src/androidIntegrationTest/java", "$projectDir/src/testShared"
-            assets.srcDirs "$projectDir/schemas", "$projectDir/src/androidIntegrationTest/assets"
-        }
-    }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
-    lintOptions {
-        abortOnError false
-        checkReleaseBuilds true
-        disable 'MissingTranslation', 'CheckResult'
+
+    dexOptions {
+        javaMaxHeapSize "6g"
     }
-    dexOptions { javaMaxHeapSize "6g" }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -91,5 +81,11 @@ dependencies {
     implementation retrofitDependencies.core
     implementation retrofitDependencies.gson
 
-    implementation okHttpDependencies.loggingInterceptor
+    implementation daggerDependencies.dagger
+    kapt daggerDependencies.daggerCompiler
+
+    implementation glideDependencies.glide
+    kapt glideDependencies.glideCompiler
+
+    implementation otherDependencies.timber
 }
